--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,138 @@
-.App {
-  text-align: center;
+@import url("https://fonts.googleapis.com/css2?family=Vazirmatn:wght@100;200;300;400;500;600;700;800;900&display=swap");
+
+body {
+  max-width: 780px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+header {
   display: flex;
-  flex-direction: column;
+  justify-content: space-between;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  padding-top: 40px;
 }
 
-.App-link {
-  color: #61dafb;
+.h_list {
+  display: flex;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.h_elem {
+  font-family: "Vazirmatn", sans-serif;
+  font-weight: 400;
+  font-size: 17px;
+  color: rgb(71, 71, 71);
+  margin-right: 10px;
+  padding: 10px 5px 5px 5px;
+}
+
+.h_elem:hover {
+  background-color: rgba(128, 128, 128, 0.128);
+  padding: 10px 5px 5px 5px;
+  border-radius: 5px;
+}
+
+.h_mode {
+  background-color: rgba(128, 128, 128, 0.128);
+  padding: 8px;
+  border-radius: 8px;
+  border: 2px solid rgba(128, 128, 128, 0);
+}
+
+.h_mode:hover {
+  cursor: pointer;
+  border: 2px solid gray;
+  box-sizing: border-box;
+  transition: all 0.4s;
+}
+
+.card_id {
+  padding-top: 60px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.name {
+  font-family: "Vazirmatn", sans-serif;
+  letter-spacing: -1px;
+  font-weight: bold;
+  font-size: 40px;
+}
+
+.job {
+  font-family: "Vazirmatn", sans-serif;
+  font-weight: 400;
+  font-size: 16px;
+  color: rgb(71, 71, 71);
+  padding-top: 7px;
+}
+
+.description {
+  font-family: "Vazirmatn", sans-serif;
+  margin-top: 20px;
+  font-weight: 400;
+  font-size: 16px;
+  color: rgb(71, 71, 71);
+  line-height: 1.4;
+}
+
+.title {
+  padding-top: 60px;
+  font-family: "Vazirmatn", sans-serif;
+  letter-spacing: -1px;
+  font-weight: bold;
+  font-size: 32px;
+}
+
+.listing_projects {
+  display: flex;
+}
+
+.card_fp {
+  flex: 1;
+  border: 2px solid;
+  border: double 4px transparent;
+  border-radius: 8px;
+  background-image: linear-gradient(rgb(255, 255, 255), white),
+    radial-gradient(circle at top left, #f00, #3020ff);
+  background-origin: border-box;
+  background-clip: padding-box, border-box;
+  margin-right: 18px;
+  padding: 10px;
+  height: 200px;
+}
+
+.card__fp {
+  flex: 1;
+  border: 2px solid;
+  border: double 4px transparent;
+  border-radius: 8px;
+  background-image: linear-gradient(white, white),
+    radial-gradient(circle at top left, #f00, #3020ff);
+  background-origin: border-box;
+  background-clip: padding-box, border-box;
+  margin-right: 10px;
+  margin-left: 10px;
+  padding: 10px;
+}
+
+.card___fp {
+  flex: 1;
+  border: 2px solid;
+  border: double 4px transparent;
+  border-radius: 8px;
+  background-image: linear-gradient(white, white),
+    radial-gradient(circle at top left, #f00, #3020ff);
+  background-origin: border-box;
+  background-clip: padding-box, border-box;
+  margin-left: 18px;
+  padding: 10px;
+}
+
+footer {
+  display: flex;
+  justify-content: space-around;
+  margin-top: 60px;
+  border-top: 1px solid rgba(128, 128, 128, 0.148);
+  padding-top: 30px;
 }
