--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,8 @@
 
 body {
   max-width: 720px;
+  padding-left: 5px;
+  padding-right: 5px;
   margin-left: auto;
   margin-right: auto;
 }
@@ -99,6 +101,19 @@ header {
   font-size: 22px;
 }
 
+.sub_project {
+  font-family: "Vazirmatn", sans-serif;
+  font-weight: 600;
+  font-size: 22px;
+}
+
+.sub-view {
+  font-family: "Vazirmatn", sans-serif;
+  font-weight: 300;
+  font-size: 17px;
+  color: rgba(0, 0, 0, 0.573);
+}
+
 .listing_projects {
   display: flex;
   padding-top: 20px;
@@ -106,15 +121,9 @@ header {
 
 .card_fp {
   flex: 1;
-  border: 2px solid;
+  border: 4px solid;
   border-radius: 50%;
-  border-image-source: linear-gradient(
-    to right,
-    #ff0000,
-    #0000ff,
-    rgb(1, 255, 1),
-    rgb(252, 3, 252)
-  );
+  border-image-source: linear-gradient(to bottom left, rgb(5, 13, 89), #0059ff);
   border-image-slice: 1;
   transition: border-image-source 0.9s;
   margin-right: 18px;
@@ -127,19 +136,17 @@ header {
 
 .card_fp:hover {
   border-image-source: linear-gradient(
-    to right,
-    rgb(252, 3, 252),
-    #ff0000,
-    #0000ff,
-    rgb(1, 255, 1)
+    to bottom,
+    rgb(255, 1, 1),
+    rgb(45, 45, 45)
   );
   cursor: pointer;
 }
 
 .card__fp {
   flex: 1;
-  border: 2px solid;
-  border-image-source: linear-gradient(to right, #ff0000, #0000ff);
+  border: 4px solid;
+  border-image-source: linear-gradient(to top left, #007782, #afaeae);
   border-image-slice: 1;
   transition: border-image-source 0.9s;
   margin-right: 10px;
@@ -151,14 +158,18 @@ header {
 }
 
 .card__fp:hover {
-  border-image-source: linear-gradient(to right, #0000ff, #ff0000);
+  border-image-source: linear-gradient(
+    to bottom,
+    rgb(255, 128, 1),
+    rgb(45, 45, 45)
+  );
   cursor: pointer;
 }
 
 .card___fp {
   flex: 1;
-  border: 2px solid;
-  border-image-source: linear-gradient(to right, #ff0000, #0000ff);
+  border: 4px solid;
+  border-image-source: linear-gradient(to top right, #00fbff, #401a2d);
   border-image-slice: 1;
   transition: border-image-source 0.9s;
   margin-left: 18px;
@@ -169,7 +180,11 @@ header {
 }
 
 .card___fp:hover {
-  border-image-source: linear-gradient(to right, #0000ff, #ff0000);
+  border-image-source: linear-gradient(
+    to bottom,
+    rgb(69, 255, 1),
+    rgb(45, 45, 45)
+  );
   cursor: pointer;
 }
 
@@ -198,6 +213,66 @@ header {
   border-bottom: 1px solid rgba(128, 128, 128, 0.208);
   padding-bottom: 15px;
   padding-top: 20px;
+}
+
+.listing_p_card {
+  margin-bottom: 160px;
+}
+
+.p_card {
+  padding-top: 45px;
+}
+
+.p_project {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.p_description {
+  font-family: "Vazirmatn", sans-serif;
+  margin-top: 15px;
+  font-weight: 400;
+  font-size: 16px;
+}
+
+.p_features {
+  font-family: "Vazirmatn", sans-serif;
+  margin-top: 6px;
+  font-weight: 400;
+  font-size: 16px;
+}
+
+.p_stack {
+  padding-top: 15px;
+  color: rgba(0, 0, 0, 0.712);
+  font-size: 15px;
+}
+
+.listing_ab {
+  padding-top: 30px;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.card_ab {
+  min-width: 300px;
+  padding: 15px;
+  margin-bottom: 10px;
+  margin-right: 10px;
+  border: 1px solid rgba(0, 0, 0, 0.093);
+  border-radius: 5px;
+}
+
+.listing_contact {
+  margin-top: 15px;
+}
+
+.list_li {
+  font-family: "Vazirmatn", sans-serif;
+  font-size: 20px;
+  font-weight: 400;
+  padding: 4px;
 }
 
 footer {
