--- a/src/App.css
+++ b/src/App.css
@@ -270,6 +270,7 @@ header {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  padding-bottom: 5px;
 }
 
 .p_description {
@@ -336,6 +337,10 @@ header {
   font-size: 20px;
   font-weight: 400;
   padding: 4px;
+}
+
+.link_more {
+  font-weight: 600;
 }
 
 .link_more:hover {
