--- a/src/App.css
+++ b/src/App.css
@@ -14,6 +14,10 @@
   margin-right: auto;
 }
 
+body::-webkit-scrollbar {
+  display: none;
+}
+
 header {
   display: flex;
   justify-content: space-between;
