--- a/src/App.css
+++ b/src/App.css
@@ -29,6 +29,19 @@ header {
   display: flex;
 }
 
+.h_count {
+  display: flex;
+  align-items: flex-end;
+  font-size: 17px;
+}
+
+.count_style {
+  font-size: 16px;
+  padding-left: 6px;
+  font-family: "Vazirmatn", sans-serif;
+  font-weight: 800;
+}
+
 .h_elem {
   font-family: "Vazirmatn", sans-serif;
   font-weight: 400;
