--- a/src/App.css
+++ b/src/App.css
@@ -18,6 +18,16 @@ body::-webkit-scrollbar {
   display: none;
 }
 
+button {
+  background-color: none;
+  border: none;
+}
+
+input {
+  border: none;
+  outline: none;
+}
+
 header {
   display: flex;
   justify-content: space-between;
@@ -220,11 +230,8 @@ header {
 .card_fp {
   flex: 1;
   border: 4px solid;
-  border-image-source: linear-gradient(
-    to bottom left,
-    rgb(92, 92, 92),
-    #000000
-  );
+  border-radius: 10px;
+  border-image: linear-gradient(to bottom left, rgba(92, 92, 92, 0), #00000000);
   border-image-slice: 1;
   transition: all 0.9s;
   padding: 15px;
@@ -263,7 +270,7 @@ header {
   flex: 1;
   border: 4px solid;
   border-radius: 10px;
-  border-image: linear-gradient(to bottom left, rgb(92, 92, 92), #000000);
+  border-image: linear-gradient(to bottom left, rgba(92, 92, 92, 0), #00000000);
   border-image-slice: 1;
   transition: all 0.9s;
   padding: 15px;
@@ -291,11 +298,8 @@ header {
 .card___fp {
   flex: 1;
   border: 4px solid;
-  border-image-source: linear-gradient(
-    to bottom left,
-    rgb(92, 92, 92),
-    #000000
-  );
+  border-radius: 10px;
+  border-image: linear-gradient(to bottom left, rgba(92, 92, 92, 0), #00000000);
   border-image-slice: 1;
   transition: all 0.9s;
   padding: 15px;
@@ -483,6 +487,138 @@ header {
   box-sizing: border-box;
 }
 
+.container_setup {
+  padding-top: 20px;
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  border-radius: 5px;
+}
+
+.detail_img {
+  font-family: "Vazirmatn", sans-serif;
+  font-weight: 400;
+  font-size: 13px;
+  padding-left: 20px;
+  opacity: 60%;
+}
+
+.container_setup img {
+  width: 100%;
+  padding: 20px;
+  box-sizing: border-box;
+}
+
+.comment_warn {
+  margin-top: 40px;
+  margin-bottom: 40px;
+  background-color: #2e63c522;
+  height: 160px;
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  border-radius: 3px;
+  border: 1px solid rgba(61, 89, 138, 0.412);
+}
+
+.style_warn {
+  font-family: "Vazirmatn", sans-serif;
+  font-weight: 600;
+  font-size: 20px;
+}
+
+.title_comment {
+  display: flex;
+  justify-content: space-between;
+}
+
+.cancel {
+  font-family: "Vazirmatn", sans-serif;
+  font-weight: 400;
+  font-size: 14px;
+  opacity: 70%;
+}
+
+.cancel:hover {
+  cursor: pointer;
+  opacity: 50%;
+}
+
+.user_input {
+  display: flex;
+  border: 1px solid red;
+  padding: 5px;
+}
+
+.user_input_text {
+  display: flex;
+  border: 1px solid rgb(0, 64, 255);
+}
+
+.user_input_comment {
+  display: flex;
+  border: 1px solid rgb(0, 255, 0);
+  width: 100%;
+}
+
+.text__input {
+  display: flex;
+}
+
+.text__input_1 {
+  display: flex;
+  margin-right: 10px;
+}
+
+.comment_elem {
+  display: flex;
+}
+
+.box_comment {
+  display: flex;
+  flex: 1;
+  width: 100%;
+}
+
+.style_inf_text {
+  font-family: "Vazirmatn", sans-serif;
+  font-weight: 400;
+  font-size: 17px;
+  opacity: 90%;
+}
+
+.style_inf {
+  font-family: "Vazirmatn", sans-serif;
+  font-weight: 400;
+  font-size: 17px;
+  padding-top: 10px;
+  opacity: 90%;
+}
+
+.button_accept {
+  margin-top: 20px;
+  padding: 5px;
+  background-color: rgba(128, 128, 128, 0.294);
+  border: none;
+  font-family: "Vazirmatn", sans-serif;
+  font-weight: 600;
+  width: 120px;
+  text-align: center;
+}
+
+.button_accept:hover {
+  cursor: pointer;
+  opacity: 70%;
+}
+
+.text_inf {
+  font-family: "Vazirmatn", sans-serif;
+  font-weight: 400;
+  font-size: 12px;
+  opacity: 60%;
+}
+
 footer {
   display: flex;
   justify-content: space-around;
@@ -531,8 +667,8 @@ footer {
     border: 4px solid;
     border-image-source: linear-gradient(
       to bottom left,
-      rgb(92, 92, 92),
-      #000000
+      rgba(92, 92, 92, 0),
+      #00000000
     );
     border-image-slice: 1;
     transition: all 0.9s;
@@ -547,7 +683,11 @@ footer {
     flex: 1;
     border: 4px solid;
     border-radius: 10px;
-    border-image: linear-gradient(to bottom left, rgb(92, 92, 92), #000000);
+    border-image: linear-gradient(
+      to bottom left,
+      rgba(92, 92, 92, 0),
+      #00000000
+    );
     border-image-slice: 1;
     transition: all 0.9s;
     margin-right: 10px;
@@ -562,7 +702,11 @@ footer {
     flex: 1;
     border: 4px solid;
     border-radius: 10px;
-    border-image: linear-gradient(to bottom left, rgb(92, 92, 92), #000000);
+    border-image: linear-gradient(
+      to bottom left,
+      rgba(92, 92, 92, 0),
+      #00000000
+    );
     border-image-slice: 1;
     transition: all 0.9s;
     margin-right: 10px;
