--- a/src/App.css
+++ b/src/App.css
@@ -25,6 +25,7 @@ button {
 
 input {
   border: none;
+  border-radius: 2px;
   outline: none;
   padding: 4px;
   opacity: 85%;
@@ -649,7 +650,7 @@ input::placeholder {
 .button_accept:hover {
   cursor: pointer;
   opacity: 90%;
-  box-shadow: 0px 0px 10px rgba(73, 116, 202, 0.751);
+  box-shadow: 0px 0px 6px rgba(238, 238, 238, 0.932);
 }
 
 .text_inf {
@@ -657,6 +658,52 @@ input::placeholder {
   font-weight: 400;
   font-size: 12px;
   opacity: 60%;
+}
+
+.box_comments {
+  padding-top: 40px;
+}
+
+.comment_elem_user {
+  display: flex;
+  padding-bottom: 35px;
+}
+
+.comment_style {
+  padding-bottom: 10px;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 17px;
+  opacity: 75%;
+}
+
+.id_comment {
+  display: flex;
+  align-items: center;
+  padding-right: 15px;
+  opacity: 40%;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+}
+
+.name_style {
+  font-weight: 500;
+  font-size: 18px;
+  color: goldenrod;
+}
+
+.date_style {
+  opacity: 30%;
+}
+
+.text__date {
+  display: flex;
+  font-family: "Vazirmatn", sans-serif;
+  font-weight: 400;
+  opacity: 75%;
+}
+
+.separator {
+  padding-left: 10px;
+  padding-right: 10px;
 }
 
 footer {
