--- a/src/App.css
+++ b/src/App.css
@@ -664,15 +664,44 @@ input::placeholder {
   padding-top: 40px;
 }
 
+.elem_song {
+  margin-top: 50px;
+}
+
 .comment_elem_user {
   display: flex;
   padding-bottom: 35px;
+}
+
+.spotify_elem_user {
+  display: flex;
+  padding-bottom: 35px;
+}
+
+.id_img img {
+  display: flex;
+  object-fit: cover;
+  max-width: 90px;
+}
+
+.title_singer {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding-left: 20px;
 }
 
 .comment_style {
   padding-bottom: 10px;
   font-family: Arial, Helvetica, sans-serif;
   font-size: 17px;
+  opacity: 75%;
+}
+
+.title_style {
+  padding-bottom: 10px;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 15px;
   opacity: 75%;
 }
 
@@ -690,6 +719,11 @@ input::placeholder {
   color: goldenrod;
 }
 
+.artist_style {
+  font-weight: 500;
+  font-size: 18px;
+}
+
 .date_style {
   opacity: 30%;
 }
@@ -704,6 +738,12 @@ input::placeholder {
 .separator {
   padding-left: 10px;
   padding-right: 10px;
+}
+
+.separator_spotify {
+  border-top: 1px solid gray;
+  opacity: 40%;
+  padding-bottom: 10px;
 }
 
 footer {
