--- a/src/App.css
+++ b/src/App.css
@@ -763,6 +763,69 @@ footer {
     padding-top: 20px;
   }
 
+  .headerBar {
+    display: none;
+  }
+
+  .faBars:hover {
+    cursor: pointer;
+  }
+
+  .navResp {
+    height: 100vh;
+  }
+
+  .resp_list {
+    margin-top: 20px;
+  }
+
+  .resp_list {
+    animation: fadein 2s;
+    -moz-animation: fadein 2s; /* Firefox */
+    -webkit-animation: fadein 2s; /* Safari et Chrome */
+    -o-animation: fadein 2s; /* Opera */
+  }
+  @keyframes fadein {
+    from {
+      opacity: 0;
+    }
+    to {
+      opacity: 1;
+    }
+  }
+  @-moz-keyframes fadein {
+    /* sur Firefox */
+    from {
+      opacity: 0;
+    }
+    to {
+      opacity: 1;
+    }
+  }
+  @-webkit-keyframes fadein {
+    /* sur Safari et Chrome */
+    from {
+      opacity: 0;
+    }
+    to {
+      opacity: 1;
+    }
+  }
+  @-o-keyframes fadein {
+    /* sur Opera */
+    from {
+      opacity: 0;
+    }
+    to {
+      opacity: 1;
+    }
+  }
+
+  .h_elem {
+    margin-bottom: 15px;
+    font-size: 25px;
+  }
+
   .img_card {
     display: flex;
     justify-content: center;
@@ -787,6 +850,14 @@ footer {
   .listing_projects {
     display: flex;
     padding-top: 20px;
+  }
+
+  .navResp {
+    display: none;
+  }
+
+  .HeaderResponsive {
+    display: none;
   }
 
   .card_fp {
