--- a/src/App.css
+++ b/src/App.css
@@ -123,6 +123,36 @@ header {
   color: white;
 }
 
+.right-elem {
+  display: flex;
+  align-items: center;
+  gap: 12px;
+}
+
+.lang {
+  opacity: 20%;
+  font-family: "Vazirmatn", sans-serif;
+  font-size: 18px;
+  font-weight: 800;
+  padding-top: 6px;
+  padding-left: 2px;
+  padding-right: 2px;
+  border-radius: 4px; /* Arrondi les coins du bouton */
+  box-shadow: 0px 0px 0px rgba(0, 0, 0, 0.3); /* Ombre du bouton */
+  transition: all 0.4s;
+  letter-spacing: 1px;
+}
+
+.lang:active {
+  transform: translateY(3px); /* Décale le bouton de 2 pixels vers le bas */
+}
+
+.lang:hover {
+  cursor: pointer;
+  transition: all 0.4s;
+  opacity: 80%;
+}
+
 .card_id {
   padding-top: 60px;
   display: flex;
@@ -212,6 +242,14 @@ header {
   letter-spacing: -1px;
   font-weight: bold;
   font-size: 32px;
+}
+
+.title-bis {
+  padding-top: 90px;
+  font-family: "Vazirmatn", sans-serif;
+  letter-spacing: -1px;
+  font-weight: bold;
+  font-size: 30px;
 }
 
 .sub_title {
