--- a/src/App.css
+++ b/src/App.css
@@ -812,7 +812,7 @@ input::placeholder {
 
 footer {
   display: flex;
-  justify-content: space-around;
+  justify-content: space-evenly;
   margin-top: 160px;
   border-top: 1px solid rgba(128, 128, 128, 0.148);
   padding-top: 30px;
