--- a/src/App.css
+++ b/src/App.css
@@ -810,6 +810,49 @@ input::placeholder {
   padding-bottom: 10px;
 }
 
+.listing-card-ytb {
+  padding-top: 40px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 17px;
+}
+
+.card-ytb {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 130px;
+  text-align: center;
+}
+
+.card-ytb:hover .avatar-ytb {
+  box-shadow: 0 0 10px rgb(96, 96, 96);
+  transition: all 0.4s;
+}
+
+.card-ytb:hover .title-ytb {
+  transform: translateY(3px);
+  transition: all 0.4s;
+}
+
+.title-ytb {
+  font-family: "Vazirmatn", sans-serif;
+  font-weight: 600;
+  font-size: 13px;
+  height: 45px;
+  margin-top: 15px;
+}
+
+.elem-card-ytb {
+  display: flex;
+  justify-content: center;
+}
+
+.avatar-ytb {
+  border-radius: 50%;
+}
+
 footer {
   display: flex;
   justify-content: space-evenly;
@@ -829,7 +872,11 @@ footer {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    padding-top: 20px;
+    padding-top: 40px;
+    margin-right: auto;
+    margin-left: auto;
+    max-width: 80%;
+    gap: 30px;
   }
 
   .listing_ab {
@@ -975,4 +1022,59 @@ footer {
     object-fit: cover;
     border-radius: 3px;
   }
+}
+
+/* / LOADING ////////////// */
+
+.loader {
+  width: 48px;
+  height: 48px;
+  border: 5px solid #7e7e7e;
+  border-radius: 50%;
+  display: inline-block;
+  box-sizing: border-box;
+  position: relative;
+  animation: pulse 1s linear infinite;
+}
+.loader:after {
+  content: "";
+  position: absolute;
+  width: 48px;
+  height: 48px;
+  border: 5px solid #d7d7d7;
+  border-radius: 50%;
+  display: inline-block;
+  box-sizing: border-box;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  animation: scaleUp 1s linear infinite;
+}
+
+@keyframes scaleUp {
+  0% {
+    transform: translate(-50%, -50%) scale(0);
+  }
+  60%,
+  100% {
+    transform: translate(-50%, -50%) scale(1);
+  }
+}
+@keyframes pulse {
+  0%,
+  60%,
+  100% {
+    transform: scale(1);
+  }
+  80% {
+    transform: scale(1.2);
+  }
+}
+
+.container-loader {
+  display: flex;
+  justify-content: center;
+  gap: 10px;
+  align-items: center;
+  font-family: Arial, Helvetica, sans-serif;
 }
